--- a/UniversitySystem/UniversitySystem.Infrastructure/UniversitySystem.Infrastructure.csproj
+++ b/UniversitySystem/UniversitySystem.Infrastructure/UniversitySystem.Infrastructure.csproj
@@ -8,15 +8,17 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="35.6.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.0">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.22" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.22" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.22">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UniversitySystem.Application\UniversitySystem.Application.csproj" />
-    <ProjectReference Include="..\UniversitySystem.Domain\UniversitySystem.Domain.csproj" />
+	  <ProjectReference Include="..\UniversitySystem.Domain\UniversitySystem.Domain.csproj" />
+	  <ProjectReference Include="..\UniversitySystem.Application\UniversitySystem.Application.csproj" />
   </ItemGroup>
 
 </Project>
