--- a/UniversitySystem/UniversitySystem.UI/UniversitySystem.UI.csproj
+++ b/UniversitySystem/UniversitySystem.UI/UniversitySystem.UI.csproj
@@ -8,12 +8,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.22">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\UniversitySystem.Application\UniversitySystem.Application.csproj" />
+    <ProjectReference Include="..\UniversitySystem.Domain\UniversitySystem.Domain.csproj" />
     <ProjectReference Include="..\UniversitySystem.Infrastructure\UniversitySystem.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
